--- a/assets/css/hagigat.css
+++ b/assets/css/hagigat.css
@@ -4,14 +4,16 @@
     box-sizing: border-box;
     font-family: 'Open Sans';
 }
+
 :root {
     --black: #170c57;
     --white: #ffffff;
     --default: #000000;
     --lightgray: #d8d4d4;
     --lightblue: #454472;
-    
+
 }
+
 header {
     display: flex;
     justify-content: center;
@@ -20,19 +22,20 @@ header {
     width: 90%;
     margin: auto;
     height: 8vh;
-    /* background-color: aqua; */
 }
+
 .foricon {
     width: 40px;
-    /* background-color: azure; */
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 #codelogo {
     font-size: 2rem;
     color: var(--black)
 }
+
 .navbar {
     display: flex;
     font-size: 1 rem;
@@ -44,48 +47,74 @@ header {
     border-radius: 20px;
     border: 1px solid var(--lightgray)
 }
+
 .navbar a {
-    /* background-color: bisque; */
     width: 100px;
     height: 3vh;
     border-radius: 20px;
     color: var(--black);
     text-decoration: none;
-    /* align-items: center; */
     text-align: center;
 }
+
 .navbar a:hover {
     background-color: #d8d4d4;
-    color: var(--white);
+    color: var(--lightblue);
 }
+
 .sociallinks {
-    /* background-color: aquamarine; */
     color: var(--black);
     width: 8%;
-    /* text-align: end; */
     height: 5vh;
     display: flex;
     align-items: end;
     flex-direction: column;
     justify-content: center;
 }
+
 .sociallinks .p {
     font-size: 0.7rem;
     color: var(--lightblue);
 }
+
 .sociallinks a {
     color: var(--black);
     font-size: 1rem;
     text-decoration: none;
     font-weight: bold;
 }
+
 .nightmode button {
     border: none;
     font-size: 20px;
     background-color: transparent;
     color: var(--black);
 }
+
 .dark-mode {
     background-color: black;
     color: var(--white)
+}
+
+@keyframes flip {
+    0% {
+        transform: perspective(400px) rotateY(0deg);
+    }
+    50% {
+        transform: perspective(400px) rotateY(90deg);
+    }
+    100% {
+        transform: perspective(400px) rotateY(180deg);
+    }
+}
+
+#codelogo {
+    font-size: 2rem;
+    color: var(--black);
+    perspective: 1000px;
+    transform-style: preserve-3d;
+    transition: transform 1.5s;
+}
+.foricon #codelogo {
+    animation: flip 3s infinite;
 }
