--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -3,3 +3,30 @@
     padding: 0;
     box-sizing: border-box;
 }
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+}
+.grid-container {
+    padding: 50px;
+    width: 100%;
+    background-color: blue;
+    height: 100vh;
+    display: grid;
+    gap: 20px;
+    /* width: 90%; */
+    /* gap: 50px 70px; */
+    /* margin: auto; */
+    /* padding: auto; */
+    /* padding: 20px; */
+    /* display: flex; */
+    grid-template: auto / auto auto auto auto;
+}
+.grid-item {
+    /* height: 20vh; */
+    background-color: aqua;
+    text-align: center;
+}
