--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -7,20 +7,46 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
 }
 .grid-container {
     padding: 50px;
     width: 100%;
-    background-color: blue;
+    /* background-color: blue; */
     height: 100vh;
     display: grid;
     gap: 20px;
-    grid-template: auto / auto auto auto auto;
+    grid-template: 100px / auto auto auto auto auto;
 }
 .grid-item {
-    /* height: 20vh; */
-    background-color: aqua;
-    text-align: center;
+    height: 30vh;
+    /* background-color: aqua; */
+    border: 2px solid #dfdede;
+    border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 150px;
+    color: rgb(61, 76, 245);
 }
+.skillsbar {
+    width: 90%;
+}
+.skills {
+    text-align: right;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: white;
+    /* width: 100%; */
+}
+.container {
+    width: 100%;
+    height: 10vh;
+}
+.html {width: 90%; background-color: #04aa6d;}
+.css {width: 80%; background-color: #2196f3;}
+.sass {width: 80%; background-color: #f45663;}
+.php {width: 60%; background-color: #808080;}
+.js {width: 60%; background-color: cadetblue;}
